try solve real-device-only layout problems

--- a/app/styles/layouts/appLayout.module.scss
+++ b/app/styles/layouts/appLayout.module.scss
@@ -2,8 +2,8 @@
 
 .body {
   font-family: var(--font-montserrat);
-  display: grid;
-  grid-template-rows: min-content 1fr;
+  // display: grid;
+  // grid-template-rows: min-content 1fr;
   color: var(--clr-text);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -18,7 +18,7 @@
 .bg_wrapper {
   left: 0;
   z-index: -10;
-  height: 100dvh;
+  // height: 100dvh;
   width: 100%;
 
   & img {
